tests/fixtures/positive/licensing/dependency-license-unknown/settings.gradle.kts
rootProject.name = "dependency-license-unknown-positive"

include(":app")
