tests/fixtures/negative/licensing/dependency-license-unknown/settings.gradle.kts
rootProject.name = "dependency-license-unknown-negative"

include(":app")
